--- a/.github/workflows/maixiaoqi7465.yml
+++ b/.github/workflows/maixiaoqi7465.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '40 1/6 * * *'
-jobs:
+jobs:  # 7205
   build:
     runs-on: ubuntu-latest
     steps:
